# ara-posix-apps

./: .gitexternals  .gitignore  meson.build  meson_options.txt
appl/: Makefile  appl_list.txt  build_makefile_app.sh  cpp_test.cpp  extract_llvm_ir.sh  meson.build
appl/cpp/: README.md  build_makefile_app.sh  cpp_test.mk  llvm_libcxx.mk  llvm_libcxx_binary.mk
appl/modules/: gnu_make.mk  libmicrohttpd.mk  libmicrohttpd_orig.mk  llvm_libcxxabi.mk  microhttpd_demo.mk  microhttpd_fileserver_dirs.mk  microhttpd_fileserver_dirs_orig.mk  musl_libc.mk  no_musl_linkage_test_appl.mk  patric_gbs_a5.mk  pulse_audio.mk
appl/objs/: meson.build
appl/simple_project/: meson.build
appl/test_appl/: create_everything.c  ignore_signal.c  multiple_sigactions.c  sigaction_macro_test.c  signal_handler.c  signal_handler_siginfo.c  thread_attr_not_unique.c  wrong_call_in_sighandler.c
libmicrohttpd/: make_libmicrohttpd_bitcode.py  meson.build
subprojects/: .gitignore  libmicrohttpd-orig.wrap  libmicrohttpd.wrap  musl-libc.wrap
subprojects/packagefiles/: libmicrohttpd-add-meson.patch  libmicrohttpd-orig-add-meson.patch
